--- a/src/scss/partitions/_media.scss
+++ b/src/scss/partitions/_media.scss
@@ -12,6 +12,12 @@
   }
 }
 
+@mixin devices-max-width-800px(){
+  @media only screen and (max-width: 800px) {
+    @content;
+  }
+}
+
 @mixin devices-max-width-768px(){
   @media only screen and (max-width: 768px) {
     @content;
@@ -58,6 +64,12 @@
 
 @mixin devices-min-width-768px(){
   @media only screen and (min-width: 768px) {
+    @content;
+  }
+}
+
+@mixin devices-min-width-800px(){
+  @media only screen and (min-width: 800px) {
     @content;
   }
 }
