--- a/src/scss/mod_search_dog.scss
+++ b/src/scss/mod_search_dog.scss
@@ -46,7 +46,10 @@
 
           .message{
             opacity: 1;
-            top: 0%;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
           }
         }
       }
@@ -67,11 +70,12 @@
           opacity: 0;
           padding: 10px;
           position: absolute;
-          top: 100%;
-          left: 0;
+          top: 50%;
+          left: 50%;
           background-color: $color-item;
           transition: all 1s ease-in-out;
-          height: 100%;
+          height: 0%;
+          width: 0%;
 
           .text{
             width: 100%;
@@ -198,6 +202,36 @@
       }
 
 
+    }
+  }
+
+  .mod_links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+    .all_post, .add_post {
+      padding: 5px;
+
+      a {
+        color: $color-grey;
+        font-size: 14px;
+        text-decoration: none;
+        display: flex;
+        align-items: center;
+
+        &:hover {
+          color: $color-base;
+        }
+
+        i{
+          font-size: 18px;
+          margin-right: 5px;
+        }
+      }
     }
   }
 
