Добавлена нижняя граница модулю розыск собаки

--- a/src/scss/mod_search_dog.scss
+++ b/src/scss/mod_search_dog.scss
@@ -5,6 +5,7 @@
 #mod_search_dog {
   margin-top: 20px;
   margin-bottom: 20px;
+  border-bottom: 1px solid $color-grey-light;
 
   .mod_title {
     margin-left: 20px;
