--- a/src/scss/mod_puppies.scss
+++ b/src/scss/mod_puppies.scss
@@ -57,280 +57,298 @@
           justify-content: center;
           align-items: center;
 
-          select {
-            background-color: $color-background-base;
-            border: 2px solid $color-background-base;
-            border-radius: .3em;
-            min-width: 150px;
-            font-size: 14px;
-
-            @include devices-max-width-992px{
-              font-size: 16px;
-            }
-
-            @include devices-min-width-1200px{
-              min-width: 180px;
-            }
-
-          }
-        }
-
-        button {
-          width: 100%;
-
-          @include devices-max-width-768px{
-            width: 50%;
-          }
-          min-height: 40px;
-          //margin: 5px;
-          background-color: $color-base;
-          border: 2px solid $color-background-base;
-          border-radius: .3em;
-          align-self: center;
-
-          i, span {
-            color: $color-background-base;
-            font-size: 18px;
-          }
-
-          span {
-            text-transform: uppercase;
-          }
-
-        }
-
-      }
-    }
-
-  }
-
-  .block_cards {
-
-    .wrap_card {
-      padding: 10px;
-      width: 100%;
-      height: 450px;
-      @include devices-min-width-480px{
-        height: 550px;
-      }
-      @include devices-min-width-600px{
-        height: 450px;
-      }
-      margin-bottom: 10px;
-
-      .meta_info {
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-
-        .top {
-          width: 50%;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-
-          i {
-            color: $color-base;
-            margin-right: 5px;
-          }
-          span {
-            text-transform: uppercase;
-            font-size: 20px;
-            color: $color-base;
-            font-weight: bold;
-          }
-        }
-
-        .price {
-          background-color: $color-base;
-          width: 50%;
-          text-align: center;
-          border-top-right-radius: .3em;
-          border-top-left-radius: .3em;
-          font-size: 20px;
-          color: $color-link-active;
-        }
-      }
-
-      .flip_card {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        //border-radius: .3em;
-        transform-style: preserve-3d;
-        transition: all 0.8s ease;
-
-        &:hover {
-          transform: rotateY(180deg);
-        }
-
-        .front_card {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          //height: 100%;
-          border: 1px solid $color-base;
-          //border-radius: .3em;
-          backface-visibility: hidden;
-          height: 400px;
-          @include devices-min-width-480px{
-            height: 500px;
-          }
-          @include devices-min-width-600px{
-            height: 400px;
-          }
-          overflow: hidden;
-          //text-align: center;
-
-          img {
-            width: 100%;
-            height: 140px;
-
-            @include devices-min-width-320px{
-              height: 180px;
-            }
-
-            @include devices-min-width-480px{
-              height: 300px;
-            }
-            @include devices-min-width-600px{
-              height: 160px;
-            }
-            @include devices-min-width-768px{
-              height: 200px;
-            }
-            @include devices-min-width-800px{
-              height: 210px;
-            }
-            @include devices-min-width-992px{
-              height: 140px;
-            }
-          }
-
-          .breed {
-            margin-top: 20px;
-            min-height: 70px;
-            max-height: 100px;
-            //overflow: hidden;
-            color: $color-base;
-            font-size: 20px;
-            text-align: center;
-          }
-
-          .fields {
-
-            padding: 10px;
-            //text-align: center;
-
-            div {
-              margin-bottom: 5px;
-
-              i {
-                margin-right: 10px;
-                margin-left: 10px;
-                font-size: 16px;
-                color: $color-base;
-              }
-            }
-          }
-        }
-
-        .back_card {
-          padding: 10px;
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          //height: 100%;
-          height: 400px;
-          @include devices-min-width-480px{
-            height: 500px;
-          }
-          @include devices-min-width-600px{
-            height: 400px;
-          }
-          backface-visibility: hidden;
-          overflow: hidden;
-          border: 1px solid $color-base;
-          background: $color-item;
-          color: $color-grey;
-          transform: rotateY(180deg);
-          display: flex;
-          flex-direction: column;
-          @include shadow_block;
-
-          .text {
-            height: 330px;
-            overflow: hidden;
-          }
-
-          .link_more {
-            width: 60%;
+          .select {
+            position: relative;
             display: flex;
-            justify-content: center;
             align-items: center;
-            align-self: center;
-            margin-top: 10px;
-            height: 30px;
-            background-color: $color-base;
+            justify-content: space-around;
+            width: 100%;
+            min-width: 160px;
+
+            border: 2px solid $color-base;
             border-radius: .3em;
 
-            a {
-              display: flex;
-              justify-content: space-around;
-              align-items: center;
+            select {
               width: 100%;
-              height: 100%;
-              color: $color-item;
+              appearance: none;
+              background-color: $color-background-base;
+              border: 3px solid lighten($color-base,15);
+              border-radius: .3em;
 
-              &:hover {
-                text-decoration: none;
-                color: $color-link-active;
-                @include shadow_block;
-
+              @include devices-max-width-992px {
+                font-size: 16px;
               }
-
-              i {
-                font-size: 18px;
-              }
+              
+            }
+            i{
+              position: absolute;
+              right: 10px;
+              color: $color-base;
+              //z-index: 100;
             }
 
           }
-        }
-      }
-    }
 
+
+        }
+
+
+      button {
+        width: 100%;
+
+        @include devices-max-width-768px {
+          width: 50%;
+        }
+        min-height: 40px;
+        //margin: 5px;
+        background-color: $color-base;
+        border: 2px solid $color-background-base;
+        border-radius: .3em;
+        align-self: center;
+
+        i, span {
+          color: $color-background-base;
+          font-size: 18px;
+        }
+
+        span {
+          text-transform: uppercase;
+        }
+
+      }
+
+    }
   }
 
-  .mod_links {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-top: 10px;
+}
+
+.block_cards {
+
+  .wrap_card {
+    padding: 10px;
+    width: 100%;
+    height: 450px;
+    @include devices-min-width-480px {
+      height: 550px;
+    }
+    @include devices-min-width-600px {
+      height: 450px;
+    }
     margin-bottom: 10px;
 
-    .all_post, .add_post {
-      padding: 5px;
+    .meta_info {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
 
-      a {
-        color: $color-grey;
-        font-size: 14px;
-        text-decoration: none;
+      .top {
+        width: 50%;
         display: flex;
         align-items: center;
+        justify-content: center;
 
-        &:hover {
+        i {
           color: $color-base;
+          margin-right: 5px;
+        }
+        span {
+          text-transform: uppercase;
+          font-size: 20px;
+          color: $color-base;
+          font-weight: bold;
+        }
+      }
+
+      .price {
+        background-color: $color-base;
+        width: 50%;
+        text-align: center;
+        border-top-right-radius: .3em;
+        border-top-left-radius: .3em;
+        font-size: 20px;
+        color: $color-link-active;
+      }
+    }
+
+    .flip_card {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      //border-radius: .3em;
+      transform-style: preserve-3d;
+      transition: all 0.8s ease;
+
+      &:hover {
+        transform: rotateY(180deg);
+      }
+
+      .front_card {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        //height: 100%;
+        border: 1px solid $color-base;
+        //border-radius: .3em;
+        backface-visibility: hidden;
+        height: 400px;
+        @include devices-min-width-480px {
+          height: 500px;
+        }
+        @include devices-min-width-600px {
+          height: 400px;
+        }
+        overflow: hidden;
+        //text-align: center;
+
+        img {
+          width: 100%;
+          height: 140px;
+
+          @include devices-min-width-320px {
+            height: 180px;
+          }
+
+          @include devices-min-width-480px {
+            height: 300px;
+          }
+          @include devices-min-width-600px {
+            height: 160px;
+          }
+          @include devices-min-width-768px {
+            height: 200px;
+          }
+          @include devices-min-width-800px {
+            height: 210px;
+          }
+          @include devices-min-width-992px {
+            height: 140px;
+          }
         }
 
-        i{
-          font-size: 18px;
-          margin-right: 5px;
+        .breed {
+          margin-top: 20px;
+          min-height: 70px;
+          max-height: 100px;
+          //overflow: hidden;
+          color: $color-base;
+          font-size: 20px;
+          text-align: center;
+        }
+
+        .fields {
+
+          padding: 10px;
+          //text-align: center;
+
+          div {
+            margin-bottom: 5px;
+
+            i {
+              margin-right: 10px;
+              margin-left: 10px;
+              font-size: 16px;
+              color: $color-base;
+            }
+          }
+        }
+      }
+
+      .back_card {
+        padding: 10px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        //height: 100%;
+        height: 400px;
+        @include devices-min-width-480px {
+          height: 500px;
+        }
+        @include devices-min-width-600px {
+          height: 400px;
+        }
+        backface-visibility: hidden;
+        overflow: hidden;
+        border: 1px solid $color-base;
+        background: $color-item;
+        color: $color-grey;
+        transform: rotateY(180deg);
+        display: flex;
+        flex-direction: column;
+        @include shadow_block;
+
+        .text {
+          height: 330px;
+          overflow: hidden;
+        }
+
+        .link_more {
+          width: 60%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          align-self: center;
+          margin-top: 10px;
+          height: 30px;
+          background-color: $color-base;
+          border-radius: .3em;
+
+          a {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+            color: $color-item;
+
+            &:hover {
+              text-decoration: none;
+              color: $color-link-active;
+              @include shadow_block;
+
+            }
+
+            i {
+              font-size: 18px;
+            }
+          }
+
         }
       }
     }
   }
+
+}
+
+.mod_links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 10px;
+  margin-bottom: 10px;
+
+  .all_post, .add_post {
+    padding: 5px;
+
+    a {
+      color: $color-grey;
+      font-size: 14px;
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+
+      &:hover {
+        color: $color-base;
+      }
+
+      i {
+        font-size: 18px;
+        margin-right: 5px;
+      }
+    }
+  }
+}
 
 }
