Настроена адаптация фильтра модуля розыск собаки

--- a/src/scss/mod_search_dog.scss
+++ b/src/scss/mod_search_dog.scss
@@ -206,6 +206,96 @@
     }
   }
 
+  .filters {
+    padding: 5px;
+    min-height: 50px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    background-color: $color-base;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    form {
+      min-height: 40px;
+      margin-left: 5px;
+      width: 100%;
+
+      .form-row {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .form-group {
+          @include clear;
+          padding: 5px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          .select {
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            width: 100%;
+            min-width: 180px;
+            border-radius: .3em;
+
+            select {
+              width: 100%;
+              appearance: none;
+              background-color: $color-background-base;
+              border: 2px solid lighten($color-base,15);
+              border-radius: .3em;
+
+              @include devices-max-width-992px {
+                font-size: 16px;
+              }
+
+            }
+            i{
+              position: absolute;
+              right: 10px;
+              color: $color-base;
+              //z-index: 100;
+            }
+
+          }
+
+
+        }
+
+
+        button {
+          width: 100%;
+
+          @include devices-max-width-600px {
+            width: 50%;
+          }
+          min-height: 40px;
+          //margin: 5px;
+          background-color: $color-base;
+          border: 2px solid $color-background-base;
+          border-radius: .3em;
+          align-self: center;
+
+          i, span {
+            color: $color-background-base;
+            font-size: 18px;
+          }
+
+          span {
+            text-transform: uppercase;
+          }
+
+        }
+
+      }
+    }
+
+  }
+
   .mod_links {
     display: flex;
     justify-content: center;
