--- a/src/scss/mod_search_owner.scss
+++ b/src/scss/mod_search_owner.scss
@@ -167,6 +167,19 @@
       .info {
         padding: 10px;
 
+        .breed, .sex{
+
+          i {
+            color: $color-red;
+            margin-right: 5px;
+            font-size: 16px;
+            font-weight: bold;
+          }
+          .label{
+            font-weight: bold;
+          }
+        }
+
         .event {
 
           span {
