--- a/src/scss/mod_show_dogs.scss
+++ b/src/scss/mod_show_dogs.scss
@@ -197,6 +197,16 @@
           overflow: hidden;
           //text-align: center;
 
+          h3 {
+            margin-top: 5px;
+            min-height: 70px;
+            max-height: 100px;
+            //overflow: hidden;
+            color: $color-base;
+            font-size: 16px;
+            text-align: center;
+          }
+
           img {
             width: 100%;
             height: 140px;
@@ -222,31 +232,57 @@
             }
           }
 
-          .breed {
-            margin-top: 20px;
-            min-height: 70px;
-            max-height: 100px;
-            //overflow: hidden;
-            color: $color-base;
-            font-size: 20px;
-            text-align: center;
-          }
 
           .fields {
+            width: 80%;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            margin-left: 20px;
 
             padding: 10px;
-            //text-align: center;
 
-            div {
-              margin-bottom: 5px;
+            .period{
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              justify-content: center;
 
-              i {
-                margin-right: 10px;
-                margin-left: 10px;
-                font-size: 16px;
-                color: $color-base;
+              .label{
+                //display: flex;
+                font-weight: bold;
+                margin-bottom: 5px;
+
+                i{
+                  color: $color-base;
+                  margin-right: 10px;
+                  font-size: 18px;
+                }
               }
             }
+
+            .operation_mode{
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              justify-content: center;
+              margin-top: 10px;
+              margin-bottom: 10px;
+
+              .label{
+                //display: flex;
+                font-weight: bold;
+                margin-bottom: 5px;
+
+                i{
+                  color: $color-base;
+                  margin-right: 10px;
+                  font-size: 18px;
+                }
+              }
+
+            }
+
           }
         }
 
