--- a/src/scss/mod_show_dogs.scss
+++ b/src/scss/mod_show_dogs.scss
@@ -39,6 +39,13 @@
       padding: 10px;
       width: 100%;
       height: 450px;
+      margin-bottom: 10px;
+
+      @include devices-min-width-320px{
+        height: 550px;
+
+      }
+
       @include devices-min-width-480px {
         height: 550px;
       }
