Улучшено отображение иконок модуля объявлений о продаже щенков

--- a/src/scss/mod_puppies.scss
+++ b/src/scss/mod_puppies.scss
@@ -233,18 +233,44 @@
           }
 
           .fields {
+            display: flex;
+            flex-direction: column;
+            //align-items: flex-end;
 
             padding: 10px;
-            //text-align: center;
-
             div {
               margin-bottom: 5px;
+
+              &.adress{
+                display: flex;
+                //justify-content: center;
+              }
 
               i {
                 margin-right: 10px;
                 margin-left: 10px;
                 font-size: 16px;
                 color: $color-base;
+
+                &.fa-mars{
+                  color: $color-icon-mars;
+                  font-size: 20px;
+                  font-weight: bold;
+                }
+
+                &.fa-venus{
+                  color: $color-icon-venus;
+                  font-size: 20px;
+                  font-weight: bold;
+                }
+                &.fa-calendar{
+                  color: $color-icon-calendar;
+                }
+                &.fa-map-marker{
+                  color: $color-icon-map;
+                  font-size: 20px;
+                  //font-weight: bold;
+                }
               }
             }
           }
