--- a/src/scss/partitions/_variables.scss
+++ b/src/scss/partitions/_variables.scss
@@ -7,6 +7,13 @@ $color-base: #095a3e;//#bc6400;//#095a3e; //$color-grey; //#bc6400; //#095a3e; /
 $color-background-base:#fff3cd;
 $color-background-content:#fff;
 
+///// * Цвета модуля объявлений о продаже щенков */////
+
+$color-icon-mars:#4479D4;
+$color-icon-venus:#BE008A;
+$color-icon-calendar:#F53D65;
+$color-icon-map:#FF0000;
+
 // Панель главного меню
 
 $color-item:#fff;
