Добавлены  правки в идентификаторы фильтров

--- a/src/scss/mod_news.scss
+++ b/src/scss/mod_news.scss
@@ -136,6 +136,7 @@
           height: 100%;
           &:hover {
             color: $color-link-active;
+            text-decoration: none;
           }
           h3 {
             width: 100%;
