Добавлена страница списка статей. Настроены стили и адаптация

--- a/src/scss/partitions/_variables.scss
+++ b/src/scss/partitions/_variables.scss
@@ -35,6 +35,8 @@ $color-border-button:$color-item;
 $font-family-base: "Roboto","Arial","Times New Roman", sans-serif;
 $font-roboto-regular:"Roboto Regular";
 $font-size-base: 14px;
+$font-size-article-title: 18px;
+$font-size-icon: 18px;
 $font-weight: normal;
 $font-logo:"BrushScriptMTCursive", "Roboto";
 $font-slogan:"Segoe Print","Roboto";
