Добавлена страница статьи. Настроены стили и адаптация

--- a/src/scss/main_content.scss
+++ b/src/scss/main_content.scss
@@ -239,9 +239,9 @@
 
   .sidebar {
     margin: 10px;
-    margin-top: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
+    //margin-top: 10px;
+    //margin-left: 10px;
+    //margin-right: 10px;
 
     .rss_subscribe, .add_post {
       display: flex;
