--- a/src/scss/partitions/_variables.scss
+++ b/src/scss/partitions/_variables.scss
@@ -2,6 +2,8 @@
 
 $color-grey:#282c2d;
 $color-grey-light:#e5e5e5;
+$color-tab-grey:#dee2e6;
+
 $color-red:#fb011e;
 $color-base: #095a3e;//#bc6400;//#095a3e; //$color-grey; //#bc6400; //#095a3e; // #186a33;
 $color-background-base:#fff3cd;
