--- a/src/scss/partitions/_variables.scss
+++ b/src/scss/partitions/_variables.scss
@@ -16,6 +16,12 @@ $color-icon-venus:#BE008A;
 $color-icon-calendar:#F53D65;
 $color-icon-map:#FF0000;
 
+///// * Цвета модуля розыск собаки */////
+$color-icon-breed:#10a06e;
+$color-icon-sex:#4479D4;
+$color-icon-event:#F53D65;
+$color-icon-map:$color-icon-map;
+
 // Панель главного меню
 
 $color-item:#fff;
