--- a/src/scss/mod_search_dog.scss
+++ b/src/scss/mod_search_dog.scss
@@ -167,10 +167,23 @@
       .info {
         padding: 10px;
 
-        .breed, .sex{
+        .breed {
 
           i {
-            color: $color-red;
+            color: $color-icon-breed;
+            margin-right: 5px;
+            font-size: 16px;
+            font-weight: bold;
+          }
+          .label{
+            font-weight: bold;
+          }
+        }
+
+        .sex{
+
+          i {
+            color: $color-icon-sex;
             margin-right: 5px;
             font-size: 16px;
             font-weight: bold;
@@ -191,7 +204,7 @@
           }
 
           i {
-            color: $color-red;
+            color: $color-icon-event;
             margin-right: 5px;
             font-size: 16px;
           }
@@ -208,7 +221,7 @@
           }
 
           i {
-            color: $color-red;
+            color: $color-icon-map;
             margin-right: 5px;
             font-size: 16px;
           }
