--- a/src/scss/mod_show_dogs.scss
+++ b/src/scss/mod_show_dogs.scss
@@ -101,10 +101,13 @@
         }
 
         .front_card {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
           position: absolute;
           top: 0;
           left: 0;
-          width: 100%;
+          width: 99%;
           border: 1px solid $color-base;
           //border-radius: .3em;
           backface-visibility: hidden;
@@ -119,7 +122,7 @@
           //text-align: center;
 
           h3 {
-            margin-top: 5px;
+            margin: 5px;
             min-height: 70px;
             max-height: 100px;
             //overflow: hidden;
@@ -129,7 +132,7 @@
           }
 
           img {
-            width: 100%;
+            width: 99%;
             height: 140px;
 
             @include devices-min-width-320px {
@@ -178,7 +181,7 @@
                 margin-bottom: 5px;
 
                 i{
-                  //color: $color-base;
+                  color: $color-icon-event;
                   margin-right: 10px;
                   font-size: 18px;
                 }
@@ -218,7 +221,7 @@
                 margin-bottom: 5px;
 
                 i{
-                  //color: $color-base;
+                  color: $color-icon-map;
                   margin-right: 10px;
                   font-size: 18px;
                 }
