--- a/src/scss/article.scss
+++ b/src/scss/article.scss
@@ -97,7 +97,7 @@
       border-bottom: 1px dashed $color-base;
 
       i {
-        color: $color-base;
+        color: $color-tag;
         font-size: 18px;
         margin-right: 5px;
       }
@@ -117,6 +117,7 @@
           margin-right: 10px;
 
           a {
+            color: $color-tag;
             &:hover {
               color: $color-base;
             }
@@ -143,15 +144,17 @@
         i {
           margin-right: 5px;
           font-size: 18px;
-          color: $color-base;
+          color: $color-statistic-icon;
         }
 
         span {
           margin-right: 5px;
-          color: $color-base;
+          color: $color-statistic-label;
         }
       }
-
+      .comments{
+        margin: 5px;
+      }
     }
 
     .datetime {
