--- a/src/scss/main_content.scss
+++ b/src/scss/main_content.scss
@@ -104,6 +104,7 @@
             margin: 5px;
             display: flex;
             align-items: center;
+            align-self: flex-end;
             //float: right;
             min-height: 25px;
             width: 120px;
@@ -151,13 +152,13 @@
           border-bottom: 1px dashed $color-base;
 
           i {
-            color: $color-base;
+            color: lighten($color-base,5%);
             font-size: 18px;
             margin-right: 5px;
           }
 
           span {
-            color: $color-base;
+            color: lighten($color-base,10%);
           }
 
           ul {
@@ -197,12 +198,12 @@
             i {
               margin-right: 5px;
               font-size: 18px;
-              color: $color-base;
+              color: lighten($color-base,5%);
             }
 
             span {
               margin-right: 5px;
-              color: $color-base;
+              color: lighten($color-base,10%);
             }
           }
 
