--- a/src/scss/main_content.scss
+++ b/src/scss/main_content.scss
@@ -38,6 +38,14 @@
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
         z-index: 100;
+
+        a {
+          color: $color-background-base;
+
+          &:hover {
+            color: $color-link-active;
+          }
+        }
       }
 
       .top_metainfo {
@@ -113,6 +121,12 @@
             padding-left: 10px;
             @include shadow_block;
 
+            &:hover {
+              i {
+                color: $color-link-active;
+              }
+            }
+
             a {
               height: 20px;
               margin-right: 5px;
@@ -152,13 +166,13 @@
           border-bottom: 1px dashed $color-base;
 
           i {
-            color: lighten($color-base,5%);
+            color: lighten($color-base, 5%);
             font-size: 18px;
             margin-right: 5px;
           }
 
           span {
-            color: lighten($color-base,10%);
+            color: lighten($color-base, 10%);
           }
 
           ul {
@@ -198,12 +212,12 @@
             i {
               margin-right: 5px;
               font-size: 18px;
-              color: lighten($color-base,5%);
+              color: lighten($color-base, 5%);
             }
 
             span {
               margin-right: 5px;
-              color: lighten($color-base,10%);
+              color: lighten($color-base, 10%);
             }
           }
 
@@ -218,21 +232,21 @@
     }
   }
 
-  .pagenav{
+  .pagenav {
     margin-top: 20px;
     margin-bottom: 20px;
 
-    li.page-item.active .page-link{
+    li.page-item.active .page-link {
       background-color: $color-base !important;
       color: $color-link-active;
       border: 1px solid $color-link-active;
     }
 
-    .page-link{
+    .page-link {
       color: $color-base;
 
-      &:hover{
-        background-color: lighten($color-base,10) ;
+      &:hover {
+        background-color: lighten($color-base, 10);
         color: $color-link-active;
       }
     }
@@ -290,20 +304,24 @@
         li {
           padding-left: 20px;
           border-bottom: 1px dashed $color-base;
-          &:hover{
+
+          &:hover {
             background-color: $color-background-base;
           }
-          &:last-child{
+
+          &:last-child {
             border: none;
-            border-bottom-left-radius:3px;
-            border-bottom-left-radius:3px;
+            border-bottom-left-radius: 3px;
+            border-bottom-left-radius: 3px;
           }
+
           a {
             display: block;
             width: 100%;
             height: 100%;
             color: $color-base;
-            &:hover{
+
+            &:hover {
               text-decoration: none;
             }
           }
@@ -322,16 +340,16 @@
           border-bottom: 1px dashed $color-base;
           cursor: pointer;
 
-          &:hover{
-            background-color: lighten($color-base,15)  !important;
+          &:hover {
+            background-color: lighten($color-base, 15) !important;
           }
 
-          a{
+          a {
             display: block;
             width: 100%;
             height: 100%;
 
-            &:hover{
+            &:hover {
               color: $color-link-active;
             }
           }
