--- a/src/scss/mod_filters.scss
+++ b/src/scss/mod_filters.scss
@@ -20,6 +20,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      flex-wrap: wrap;
 
       .filter-label {
         min-width: 100px;
