--- a/src/scss/mod_puppies.scss
+++ b/src/scss/mod_puppies.scss
@@ -190,7 +190,7 @@
         }
 
         .back_card {
-          padding: 10px;
+          //padding: 10px;
           position: absolute;
           top: 0;
           left: 0;
@@ -213,8 +213,34 @@
           flex-direction: column;
           @include shadow_block;
 
+          img {
+            width: 100%;
+            height: 140px;
+
+            @include devices-min-width-320px {
+              height: 180px;
+            }
+
+            @include devices-min-width-480px {
+              height: 300px;
+            }
+            @include devices-min-width-600px {
+              height: 160px;
+            }
+            @include devices-min-width-768px {
+              height: 200px;
+            }
+            @include devices-min-width-800px {
+              height: 210px;
+            }
+            @include devices-min-width-992px {
+              height: 140px;
+            }
+          }
+
           .text {
-            height: 330px;
+            margin: 10px;
+            height: 200px;
             overflow: hidden;
           }
 
@@ -224,7 +250,7 @@
             justify-content: center;
             align-items: center;
             align-self: center;
-            margin-top: 10px;
+            //margin-top: 10px;
             height: 30px;
             background-color: $color-base;
             border-radius: .3em;
