--- a/src/scss/mod_news.scss
+++ b/src/scss/mod_news.scss
@@ -20,6 +20,7 @@
   .wrapper_main_new {
     @include clear;
     width: 100%;
+    height: 330px;
     //border: 1px solid grey;
     position: relative;
     overflow: hidden;
@@ -28,158 +29,190 @@
       margin-bottom: 40px;
     }
     &:hover {
-      img {
-        transform: scale(1.1);
+      .text_wrap{
+        top:0;
+        opacity: .9;
       }
+      //img {
+      //  transform: scale(1.1);
+      //}
     }
 
     .image_wrap{
       width: 100%;
-      //height: 330px;
+      height: 330px;
       overflow: hidden;
+      cursor: pointer;
       img {
         //width: 528px;
         width: 100%;
         //height: 100%;
-        transition: 1s;
+        //transition: 1s;
       }
     }
-    .title_wrap {
-      @include clear;
-      width: 100%;
-      height: 70px;
-      display: flex;
-      justify-content: flex-start;
-      color: $color-item;
-      z-index: 100;
 
-      @include devices-max-width-480px {
-        flex-direction: column;
-      }
+    .text_wrap{
+      position: absolute;
+      top: 260px;
+      left: 0;
+      height: 400px;
+      background-color: #fff;
+      transition: 1s;
 
-      .data {
+      .title_wrap {
         @include clear;
-        margin-right: 20px;
-        padding: 5px;
+        width: 100%;
+        height: 70px;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        min-width: 100px;
-        background-color: $color-base;
+        justify-content: flex-start;
+        color: $color-item;
         z-index: 100;
 
         @include devices-max-width-480px {
-          flex-direction: row;
-          //justify-content: center;
-          //align-items: center;
-          min-height: 30px;
-          width: 100%;
+          flex-direction: column;
         }
 
-        .day {
-          z-index: 101;
-          font-size: 22px;
-          color: $color-link-active;
-          height: 25px;
+        .data {
+          @include clear;
+          margin-right: 20px;
+          padding: 5px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          min-width: 100px;
+          background-color: $color-base;
+          z-index: 100;
 
           @include devices-max-width-480px {
-            height: 20px;
-            font-size: 16px;
-            align-self: center;
-            margin-right: 5px;
-          }
-        }
-
-        .month {
-          z-index: 101;
-          height: 20px;
-          color: $color-item;
-          font-size: 16px;
-          text-transform: lowercase;
-
-          @include devices-max-width-480px {
-            font-size: 16px;
-            align-self: center;
-            margin-right: 5px;
-          }
-        }
-
-        .year {
-          z-index: 101;
-          color: $color-link-active;
-          font-size: 14px;
-
-          @include devices-max-width-480px {
-            height: 20px;
-            font-size: 16px;
-            align-self: center;
-          }
-        }
-      }
-
-      .title_new {
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        width: 100%;
-        height: 70px;
-        margin-left: -20px;
-        background-color: lighten($color-grey, 5);
-        padding: 10px;
-        overflow: hidden;
-        //opacity: .5;
-
-        @include devices-max-width-480px {
-          margin-left: 0px;
-          min-height: 70px;
-        }
-
-        a {
-          color: $color-link;
-          display: block;
-          width: 100%;
-          height: 100%;
-
-          &:hover {
-            color: $color-link-active;
-            text-decoration: none;
-          }
-
-          h3 {
+            flex-direction: row;
+            //justify-content: center;
+            //align-items: center;
+            min-height: 30px;
             width: 100%;
-            height: 100%;
-            z-index: 105;
-            @include clear;
-            font-size: 18px;
-            //opacity: 1;
+          }
 
-            @include devices-max-width-768px {
-              font-size: 16px;
-            }
+          .day {
+            z-index: 101;
+            font-size: 22px;
+            color: $color-link-active;
+            height: 25px;
 
             @include devices-max-width-480px {
-              font-size: 14px;
+              height: 20px;
+              font-size: 16px;
+              align-self: center;
+              margin-right: 5px;
+            }
+          }
+
+          .month {
+            z-index: 101;
+            height: 20px;
+            color: $color-item;
+            font-size: 16px;
+            text-transform: lowercase;
+
+            @include devices-max-width-480px {
+              font-size: 16px;
+              align-self: center;
+              margin-right: 5px;
+            }
+          }
+
+          .year {
+            z-index: 101;
+            color: $color-link-active;
+            font-size: 14px;
+
+            @include devices-max-width-480px {
+              height: 20px;
+              font-size: 16px;
+              align-self: center;
             }
           }
         }
 
+        .title_new {
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          width: 100%;
+          height: 70px;
+          margin-left: -20px;
+          background-color: lighten($color-grey, 5);
+          padding: 10px;
+          overflow: hidden;
+          //opacity: .5;
+
+          @include devices-max-width-480px {
+            margin-left: 0px;
+            min-height: 70px;
+          }
+
+          a {
+            color: $color-link;
+            display: block;
+            width: 100%;
+            height: 100%;
+
+            &:hover {
+              color: $color-link-active;
+              text-decoration: none;
+            }
+
+            h3 {
+              width: 100%;
+              height: 100%;
+              z-index: 105;
+              @include clear;
+              font-size: 18px;
+              //opacity: 1;
+
+              @include devices-max-width-768px {
+                font-size: 16px;
+              }
+
+              @include devices-max-width-480px {
+                font-size: 14px;
+              }
+            }
+          }
+
+        }
+      }
+
+      .intro_new {
+        background-color: #fff;
+        transition: 1s;
+        padding: 5px;
+        padding-top: 10px;
+
+        @include devices-max-width-480px {
+          display: none;
+        }
+
+        p {
+          font-size: 14px;
+        }
+        .link_more{
+          width: 110px;
+          min-height: 30px;
+          display: flex;
+          justify-content: space-around;
+          align-items: center;
+          border-radius: .3em;
+          text-decoration: none ;
+          background-color: $color-link-base;
+          color: $color-item;
+
+          &:hover{
+            color: $color-link-active;
+            @include shadow_block;
+          }
+        }
       }
     }
-
-    .intro_new {
-      padding: 5px;
-      padding-top: 10px;
-
-      @include devices-max-width-480px {
-        display: none;
-      }
-
-      p {
-        font-size: 14px;
-      }
-    }
-
   }
 
   .wrap_block_news {
