--- a/src/scss/mod_news.scss
+++ b/src/scss/mod_news.scss
@@ -219,6 +219,7 @@
     display: flex;
     align-items: stretch;
     justify-content: space-between;
+    //border-bottom: 1px dotted $color-grey;
 
     @media only screen and (max-width: 600px) {
       flex-direction: column;
@@ -229,33 +230,40 @@
     }
 
     .wrap_new {
+      position: relative;
       width: 100%;
-      //height: 300px;
-      height: 100%;
+      height: 330px;
       display: flex;
       flex-direction: column;
       //border: 1px solid $color-grey;
-      overflow: hidden;
-      border-bottom: 3px solid $color-grey-light;
-      margin-bottom: 20px;
+      //border-bottom: 3px solid $color-grey-light;
+      margin-bottom: 5px;
       overflow: hidden;
 
       &:hover {
         border-bottom: 3px solid $color-base;
-        img {
-          width: 100%;
-          transform: scale(1.1);
+        opacity: .9;
+        .wrap_text{
+          top: 0;
+          .title_new{
+            min-height: 50px;
+            border-bottom: 3px solid $color-link-base;
+            margin-bottom: 5px;
+          }
         }
+        //img {
+        //  width: 100%;
+        //  transform: scale(1.1);
+        //}
       }
 
       .wrap_new_img{
         width: 100%;
-        overflow: hidden;
+        height: 180px;
 
         img {
           width: 100%;
           height: 180px;
-          transition: 1s;
 
           @include devices-min-width-320px {
             height: 180px;
@@ -283,24 +291,36 @@
         }
       }
 
-      .data {
-        color: $color-base;
-        padding: 5px;
-        text-transform: lowercase;
-      }
+      .wrap_text{
+        position: absolute;
+        top: 180px;
+        left: 0;
+        background-color: $color-background-content;
+        transition: 1s;
 
-      .title_new {
-        padding: 5px;
+        .data {
+          color: $color-base;
+          padding: 5px;
+          text-transform: lowercase;
+        }
 
-        h3 {
-          font-size: 16px;
-          font-family: RobotoRegular;
+        .title_new {
+          padding: 5px;
+          width: 100%;
+          min-height: 120px;
+          overflow: hidden;
+          transition: 1s;
 
-          a {
-            color: $color-grey;
+          h3 {
+            font-size: 16px;
+            font-family: RobotoRegular;
 
-            &:hover {
-              color: $color-base;
+            a {
+              color: $color-grey;
+
+              &:hover {
+                color: $color-base;
+              }
             }
           }
         }
@@ -318,6 +338,7 @@
       min-height: 50px;
       padding-top: 5px;
       padding-bottom: 5px;
+      padding-left: 20px;
 
       .datatime {
         font-size: 12px;
