--- a/src/scss/partitions/_media.scss
+++ b/src/scss/partitions/_media.scss
@@ -6,6 +6,11 @@
   }
 }
 
+@mixin devices-max-width-1024px(){
+  @media only screen and (max-width: 1024px) {
+    @content;
+  }
+}
 @mixin devices-max-width-992px(){
   @media only screen and (max-width: 992px) {
     @content;
@@ -76,6 +81,11 @@
 
 @mixin devices-min-width-992px(){
   @media only screen and (min-width: 992px) {
+    @content;
+  }
+}
+@mixin devices-min-width-1024px(){
+  @media only screen and (min-width: 1024px) {
     @content;
   }
 }
